@startuml

title __ENSYNC's Class Diagram__\n

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Execute {
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Flow {
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Main {
    }
  }
  

  namespace com.olexyn.ensync {
    class com.olexyn.ensync.Tools {
    }
  }
  

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncDirectory {
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncFile {
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace artifacts {
      class com.olexyn.ensync.artifacts.SyncMap {
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace ui {
      class com.olexyn.ensync.ui.Bridge {
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace ui {
      class com.olexyn.ensync.ui.Controller {
      }
    }
  }
  

  namespace com.olexyn.ensync {
    namespace ui {
      class com.olexyn.ensync.ui.UI {
      }
    }
  }
  

  com.olexyn.ensync.Flow .up.|> java.lang.Runnable
  com.olexyn.ensync.Flow o-- com.olexyn.ensync.Tools : tools
  com.olexyn.ensync.Tools o-- com.olexyn.ensync.Execute : x
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.Tools : tools
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.Execute : x
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.artifacts.SyncMap : syncMap
  com.olexyn.ensync.artifacts.SyncDirectory o-- com.olexyn.ensync.artifacts.SyncDirectory : thisSD
  com.olexyn.ensync.artifacts.SyncFile -up-|> java.io.File
  com.olexyn.ensync.artifacts.SyncFile o-- com.olexyn.ensync.artifacts.SyncDirectory : sd
  com.olexyn.ensync.artifacts.SyncMap o-- com.olexyn.ensync.Tools : tools
  com.olexyn.ensync.ui.Controller .up.|> javafx.fxml.Initializable
  com.olexyn.ensync.ui.Controller o-- com.olexyn.ensync.ui.Bridge : bridge
  com.olexyn.ensync.ui.UI .up.|> java.lang.Runnable
  com.olexyn.ensync.ui.UI -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
